--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Frontend Mentor | Intro component with sign up form</title>
     <style>
         .attribution {
