--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <h1>Learn to code by watching others</h1>
     <p> See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
         but understanding how developers think is invaluable. </p>
-     <p>Try it free 7 days then $20/mo. thereafter</p>
+     <div id='trial-con'>
+         <p id='trial-text'>Try it free 7 days then $20/mo. thereafter</p>
+    </div>
     <div>
         <form id='form'>
             <input type='text' placeholder="First Name"><br>
