--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <div id='trial-con'>
          <p id='trial-text'>Try it free 7 days then $20/mo. thereafter</p>
     </div>
-    <div>
+    <div id='form-con'>
         <form id='form'>
             <input type='text' placeholder="First Name"><br>
             <input type='text' placeholder="Last Name"><br>
