Done with the Form styles

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <input type='password' placeholder="Password">
         </form>
     <button type="submit">Claim Your Free Trial</button>
-    <p>By clicking the button, you are agreeing to our Terms and Services</p>
+    <p id='terms'>By clicking the button, you are agreeing to our <span id='term-text'>Terms and Services</span></p>
     </div>
     <footer>
     <p class="attribution">
