--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href='css/styles.css'>
 </head>
 <body>
+    <div id='main-con'>
     <h1>Learn to code by watching others</h1>
     <p> See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
         but understanding how developers think is invaluable. </p>
@@ -37,6 +38,7 @@
         </form>
     <button type="submit">Claim Your Free Trial</button>
     <p id='terms'>By clicking the button, you are agreeing to our <span id='term-text'>Terms and Services</span></p>
+    </div>
     </div>
     <footer>
     <p class="attribution">
