--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
 <body>
     <div id='main-con'>
-    <h1>Learn to code by watching others</h1>
-    <p> See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+    <h1 id='heading-text'>Learn to code by watching others</h1>
+    <p id='body-text'> See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
         but understanding how developers think is invaluable. </p>
      <div id='trial-con'>
          <p id='trial-text'>Try it free 7 days then $20/mo. thereafter</p>
