--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </div>
     <div id='form-con'>
         <form id='form'>
-            <input type='text' placeholder="First Name"><br>
-            <input type='text' placeholder="Last Name"><br>
-            <input type='email' placeholder="Email Address"><br>
-            <input type='password' placeholder="Password">
+            <input type='text' name='FirstName' placeholder="First Name"><br>
+            <input type='text' name='LastName' placeholder="Last Name"><br>
+            <input type='email' name='EmailAddress' placeholder="Email Address"><br>
+            <input type='password' name='password' placeholder="Password">
         </form>
     <button type="submit">Claim Your Free Trial</button>
     <p id='terms'>By clicking the button, you are agreeing to our <span id='term-text'>Terms and Services</span></p>
