--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
     </div>
     <div id='form-con'>
         <form id='form'>
-            <input type='text' required name='FirstName' placeholder="First Name"><br>
-            <input type='text' required name='LastName' placeholder="Last Name"><br>
-            <input type='email' required name='EmailAddress' placeholder="Email Address"><br>
-            <input type='password' required name='password' placeholder="Password">
+            <input type='text'  name='FirstName' placeholder="First Name"><br>
+            <p></p>
+            <input type='text'  name='LastName' placeholder="Last Name"><br>
+            <p></p>
+            <input type='email'  name='EmailAddress' placeholder="Email Address"><br>
+            <p></p>
+            <input type='password'  name='password' placeholder="Password">
+            <p></p>
         </form>
     <button type="submit">Claim Your Free Trial</button>
     <p id='terms'>By clicking the button, you are agreeing to our <span id='term-text'>Terms and Services</span></p>
