--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <div id='form-con'>
         <form id='form'>
             <input type='text'  name='FirstName' placeholder="First Name"><br>
-            <p></p>
+            <p class='errorP'></p>
             <input type='text'  name='LastName' placeholder="Last Name"><br>
-            <p></p>
+            <p class='errorP'></p>
             <input type='email'  name='EmailAddress' placeholder="Email Address"><br>
-            <p></p>
+            <p class='errorP'></p>
             <input type='password'  name='password' placeholder="Password">
-            <p></p>
+            <p class='errorP'></p>
         </form>
     <button type="submit">Claim Your Free Trial</button>
     <p id='terms'>By clicking the button, you are agreeing to our <span id='term-text'>Terms and Services</span></p>
